# graze

./: .buildinfo  EXCEPTIONAL_URLS_SUMMARY.md  README.md  demo_exceptional_urls.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html  test_exceptional_integration.py
.github/workflows/: _old_ci.yml  _old_ci_2.yml  ci.yml
_modules/: index.html
_modules/graze/: _migration_tools.html  base.html  graze_exceptional.html  migration_tools.html  util.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/graze/: _migration_tools.rst.txt  graze_exceptional.rst.txt  util.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/graze/: base.html
docs/_sources/: index.rst.txt
docs/_sources/module_docs/graze/: base.rst.txt
docs/module_docs/: graze.html
docs/module_docs/graze/: base.html  util.html
docsrc/: table_of_contents.rst
docsrc/module_docs/: graze.rst
docsrc/module_docs/graze/: migration_tools.rst
graze/: __init__.py  _migration_tools.py  base.py  graze_exceptional.py  migration_tools.py  util.py
graze/tests/: __init__.py  test_base.py  test_graze_exceptional.py
misc/: CHANGELOG.md  graze_demo.ipynb
module_docs/: graze.html
module_docs/graze/: _migration_tools.html  base.html  graze_exceptional.html  migration_tools.html  util.html
tests/: test_smoke.py
