[metadata]
name = graze
version = 0.0.4
url = https://github.com/thorwhalen/graze
packages = 
		graze
include_package_data = True
platforms = any
description_file = README.md
description = Cache (a tiny part of) the internet
root_url = https://github.com/thorwhalen
author = Thor Whalen
license = mit
description-file = README.md
install_requires = 
		py2store
		requests
long_description_content_type = text/markdown

