[metadata]
name = graze
version = 0.1.18
url = https://github.com/thorwhalen/graze
platforms = any
description_file = README.md
description = Cache (a tiny part of) the internet
root_url = https://github.com/thorwhalen
author = Thor Whalen
license = mit
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	requests

